// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "workloadapi/workload.proto";

package istio.workload;
option go_package="pkg/workloadapi";

message FederatedService {
  // Name represents the name for the service.
  // For Kubernetes, this is the Service name.
  string name = 1;
  // Namespace represents the namespace for the service.
  string namespace = 2;
  // Hostname represents the FQDN of the service.
  // For Kubernetes, this would be <name>.<namespace>.svc.<cluster domain>.
  string hostname = 3;
  // TrafficDistribution within the source cluster if any.
  string traffic_distribution = 8;
  // List of subject alt names to verify against. This will aggregate the SANs of all workloads in
  // the remote cluster.
  repeated string subject_alt_names = 4;
  // Ports for the service.
  // The target_port may be overridden on a per-workload basis.
  repeated Port ports = 5;
  // Capacity for this service. This represents a logical weighting for amount of traffic the service can handle.
  // A value of 0 is valid, and indicates the service is unable to handle any traffic.
  // Other arbitrary values are valid, and control the relative amount of traffic that the service can handle (relative to other object's capacity).
  // If unset, the capacity is default to 1.
  google.protobuf.UInt32Value capacity = 6;
  // Information about a remote waypoint, if any
  RemoteWaypoint waypoint = 7;
  // WaypointFor is specified only if the Service itself is a waypoint.
  string waypoint_for = 9;
}

message RemoteWaypoint  {
  // Name represents the name for the service.
  // This will reference the name of another FederatedService.
  string name = 1;
  // Name represents the namespace for the service.
  // This will reference the namespace of another FederatedService.
  string namespace = 2;
}
